# governed-nlp-pipeline-szhang

./: README.md  pyproject.toml  requirements.txt
src/governed_nlp/: cli.py  config.py
src/governed_nlp/data/: synthetic.py
src/governed_nlp/modeling/: evaluate.py  metrics.py  train.py
src/governed_nlp/nlp/: chunking.py  tokenize.py
src/governed_nlp/preprocess/: normalize.py  prompt_format.py  qc.py  split.py
src/governed_nlp_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_metrics.py  test_normalize.py  test_prompt_format.py  test_qc.py
