[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "governed-nlp-pipeline"
version = "0.1.0"
description = "Governed NLP preprocessing pipeline: QC, normalization, prompt-aware formatting, tokenization, chunking."
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.pytest.ini_options]
testpaths = ["tests"]